--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -1,10 +1,11 @@
 FROM nvidia/cuda:12.2.2-cudnn8-runtime-ubuntu22.04
 # `ffmpeg` is installed because without it `gradio` won't work with mp3(possible others as well) files
 # hadolint ignore=DL3008,DL3015,DL4006
+
 RUN apt-get update && \
     apt-get install -y ffmpeg software-properties-common && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.12 python3.12-distutils && \
+    add-apt-repository ppa:deadsnakes/nightly -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends python3.12 && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 COPY --from=ghcr.io/astral-sh/uv:0.4.4 /uv /bin/uv
